[gd_scene load_steps=10 format=3 uid="uid://cddnfvs01843x"]

[ext_resource type="Script" path="res://scripts/workers.gd" id="1_prul7"]
[ext_resource type="Script" path="res://scripts/workers_parallax_background.gd" id="2_gjwq4"]
[ext_resource type="Texture2D" uid="uid://bsoyrm76xswam" path="res://assets/outside/sky.png" id="3_pxeey"]
[ext_resource type="Texture2D" uid="uid://f5hk0no2shh" path="res://assets/outside/clouds.png" id="4_3e4kg"]
[ext_resource type="Texture2D" uid="uid://43wtawebhlod" path="res://assets/outside/mountains.png" id="5_ry1b5"]
[ext_resource type="Texture2D" uid="uid://bg8a7rgit8bwt" path="res://assets/outside/ground.png" id="6_grv3b"]
[ext_resource type="Texture2D" uid="uid://d4doh6myg5p36" path="res://assets/outside/items.png" id="7_jd1ku"]
[ext_resource type="Texture2D" uid="uid://dihs2q2iwvpdn" path="res://assets/outside/workshop_back.png" id="8_ijxqq"]
[ext_resource type="Texture2D" uid="uid://dpmf5gfarq5g" path="res://assets/outside/workshop.png" id="9_ncigp"]

[node name="Workers" type="Node2D"]
script = ExtResource("1_prul7")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
script = ExtResource("2_gjwq4")

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(143, 543)

[node name="Sky" type="TextureRect" parent="ParallaxBackground/ParallaxLayer"]
offset_left = -143.0
offset_top = -43.0
offset_right = 657.0
offset_bottom = 105.0
texture = ExtResource("3_pxeey")

[node name="ParallaxLayer4" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(143, 543)
motion_mirroring = Vector2(800, 0)

[node name="Clouds" type="TextureRect" parent="ParallaxBackground/ParallaxLayer4"]
offset_left = -143.0
offset_top = -43.0
offset_right = 657.0
offset_bottom = 105.0
texture = ExtResource("4_3e4kg")

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(143, 543)

[node name="Mountains" type="TextureRect" parent="ParallaxBackground/ParallaxLayer2"]
offset_left = -143.0
offset_top = -43.0
offset_right = 657.0
offset_bottom = 105.0
texture = ExtResource("5_ry1b5")

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
z_as_relative = false
position = Vector2(143, 543)

[node name="Ground" type="TextureRect" parent="ParallaxBackground/ParallaxLayer3"]
offset_left = -143.0
offset_top = -43.0
offset_right = 657.0
offset_bottom = 105.0
texture = ExtResource("6_grv3b")

[node name="Items" type="TextureRect" parent="ParallaxBackground/ParallaxLayer3"]
offset_left = -143.0
offset_top = -43.0
offset_right = 657.0
offset_bottom = 105.0
texture = ExtResource("7_jd1ku")

[node name="WorkshopBack" type="TextureRect" parent="ParallaxBackground/ParallaxLayer3"]
offset_left = -143.0
offset_top = -43.0
offset_right = 657.0
offset_bottom = 105.0
texture = ExtResource("8_ijxqq")

[node name="WorkersList" type="Node" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 1
z_as_relative = false
position = Vector2(0, 500)
scale = Vector2(4, 4)
texture = ExtResource("9_ncigp")
centered = false

[node name="StartPoint" type="Marker2D" parent="."]
position = Vector2(784, 606)

[node name="WoodPoint" type="Marker2D" parent="."]
position = Vector2(110, 606)

[node name="StonePoint" type="Marker2D" parent="."]
position = Vector2(254, 606)

[node name="IronPoint" type="Marker2D" parent="."]
position = Vector2(401.4, 606)

[node name="GoldPoint" type="Marker2D" parent="."]
position = Vector2(536, 606)
